Fix summary spacing in chrome 97 [revdep skip]

--- a/inst/css/datasetmerging.css
+++ b/inst/css/datasetmerging.css
@@ -9,7 +9,6 @@
     color: #151A1C;
     font-size: 14px;
     margin-top: 5px;
-    margin-bottom: 5px;
     user-select: none;
     padding-left: 10px; /* so doesnt overlap with displayr resize tool */
 }
